Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/AgenticQTC_Config__mdt.object-meta.xml
<CustomObject>
    <label>AgenticQTC Config</label>
    <pluralLabel>AgenticQTC Configs</pluralLabel>
</CustomObject>