Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/fields/Callout_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <label>Callout Timeout (ms)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>