Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/fields/Claude_Model__c.field-meta.xml
<CustomField>
    <fullName>Claude_Model__c</fullName>
    <defaultValue>&quot;claude-sonnet-4-20250514&quot;</defaultValue>
    <label>Claude Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>