Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <label>Default Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>