Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/fields/Max_AI_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Max_AI_Rounds__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max AI Rounds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>