Doc/force-app/main/default/objects/AgenticQTC_Config__mdt/fields/Use_CPQ_APIs__c.field-meta.xml
<CustomField>
    <fullName>Use_CPQ_APIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use CPQ APIs</label>
    <type>Checkbox</type>
</CustomField>